# myocardio-web

./: flake.nix  haskell-miso.cabal  myocardio.cabal
client/: Main.hs
server/: Main.hs
server/Myocardio/: ConfigJson.hs  Exercise.hs  Ranking.hs
shared/: Common.hs
shared/Myocardio/: ExerciseData.hs  Muscle.hs  Util.hs
