name:                haskell-miso
version:             0.1.0.1
synopsis:            https://haskell-miso.org
description:         Website for the Miso web framework
homepage:            https://haskell-miso.org
license:             BSD3
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2017-2018
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    other-modules:
      Myocardio.Endo,
      Myocardio.Exercise,
      Myocardio.ExerciseData,
      Myocardio.FormatTime,
      Myocardio.ConfigJson,
      Myocardio.Muscle,
      Myocardio.MuscleWithTrainingState,
      Myocardio.Ranking,
      Myocardio.TrainingState,
      Myocardio.Util
      Common
    ghc-options:
      -O2 -threaded -Wall -rtsopts
    hs-source-dirs:
      server, shared
    build-depends:
      aeson,
      base < 5,
      time,
      microlens,
      bytestring,
      directory,
      xdg-basedir,
      microlens-platform,
      containers,
      http-types,
      lucid,
      miso,
      mtl,
      network-uri,
      servant,
      servant-lucid,
      servant-server,
      text,
      wai,
      wai-app-static,
      wai-extra,
      warp
    default-language:
      Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    other-modules:
      Myocardio.Endo,
      Myocardio.Exercise,
      Myocardio.ExerciseData,
      Myocardio.FormatTime,
      Myocardio.Muscle,
      Myocardio.MuscleWithTrainingState,
      Myocardio.TrainingState,
      Myocardio.Util,
      Common
    ghcjs-options:
      -dedupe -DGHCJS_GC_INTERVAL=5000
    hs-source-dirs:
      client, shared
    build-depends:
      aeson,
      base < 5,
      containers,
      text,
      time,
      ghcjs-base,
      miso,
      servant,
      microlens-platform
    default-language:
      Haskell2010
