name:                myocardio
version:             3.0.0
synopsis:            myocardio is a small utility to generate exercise split plans for you
description:         myocardio is a small utility to generate exercise split plans for you.
homepage:            https://github.com/pmiddend/myocardio-web
license:             GPL-3.0-or-later
author:              Philipp Middendorf
maintainer:          pmidden@mailbox.org
copyright:           2023 Philipp Middendorf
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    other-modules:
      Myocardio.Endo,
      Myocardio.Exercise,
      Myocardio.ExerciseData,
      Myocardio.FormatTime,
      Myocardio.ConfigJson,
      Myocardio.Muscle,
      Myocardio.MuscleWithTrainingState,
      Myocardio.Ranking,
      Myocardio.TrainingState,
      Myocardio.Util
      Common
    ghc-options:
      -O2 -threaded -Wall -rtsopts
    hs-source-dirs:
      server, shared
    build-depends:
      aeson,
      base < 5,
      time,
      microlens,
      bytestring,
      directory,
      xdg-basedir,
      microlens-platform,
      containers,
      http-types,
      lucid,
      miso,
      mtl,
      network-uri,
      servant,
      servant-lucid,
      servant-server,
      text,
      wai,
      wai-app-static,
      wai-extra,
      warp
    default-language:
      Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    other-modules:
      Myocardio.Endo,
      Myocardio.Exercise,
      Myocardio.ExerciseData,
      Myocardio.FormatTime,
      Myocardio.Muscle,
      Myocardio.MuscleWithTrainingState,
      Myocardio.TrainingState,
      Myocardio.Util,
      Common
    ghcjs-options:
      -dedupe -DGHCJS_GC_INTERVAL=5000
    hs-source-dirs:
      client, shared
    build-depends:
      aeson,
      base < 5,
      containers,
      text,
      time,
      ghcjs-base,
      microlens,
      bytestring,
      miso,
      servant,
      microlens-platform
    default-language:
      Haskell2010
